# MyGAL

examples/: CMakeLists.txt
tests/: CMakeLists.txt
